--- a/06-WebContentStructure/AI.html
+++ b/06-WebContentStructure/AI.html
@@ -13,7 +13,7 @@
         requiring human intelligence. These tasks include
         problem-solving, understanding natural language,
         recognizing patterns, and making decisions.</p>
-    <img src="Artificial-Intelligence.jpeg" alt="AI">
+    <img src="Artificial-Intelligence.jpeg" alt="AI" width=500>
     <p>AI is a broad field that encompasses various subfields
         and techniques, such as machine learning, natural
         language processing, robotics, and computer vision.</p>
@@ -41,7 +41,7 @@
         human expertise in specific domains, such as medical
         diagnosis or financial decision-making.</li>
     </ol>
-    <img src="https://images.indianexpress.com/2024/02/amazon-alexa-echo-featured.jpg" alt="Alexa">
+    <img src="https://images.indianexpress.com/2024/02/amazon-alexa-echo-featured.jpg" alt="Alexa" width=500>
     <h2>Examples of AI in Daily Life</h2>
     <p>AI is used as voice assistants. Siri, Google Assistant,
         and Alexa use AI to understand and respond to voice
@@ -49,6 +49,46 @@
         recommend products or shows based on your previous
         interactions. AI enables self-driving cars to navigate
         roads and make driving decisions.</p>
+    <p>The data in the table shows four main areas of AI application:
+        natural language processing, computer vision, machine learning,
+        and reinforcement learning. Each area is related to a specific application,
+        such as chatbots, medical image analysis systems, or autonomous vehicles.
+        These applications have a significant impact on various sectors,
+        improving the efficiency of customer service, medical diagnostics,
+        protection against financial fraud, and the development of modern
+        technologies such as self-driving cars.</p>
+        <table border="1">
+            <tr>
+                <th>Field</th>
+                <th>Application</th>
+                <th>Example</th>
+                <th>Impact</th>
+            </tr>
+            <tr>
+                <td>Natural Language Processing</td>
+                <td>Chatbots</td>
+                <td>ChatGPT</td>
+                <td>Improves customer service efficiency</td>
+            </tr>
+            <tr>
+                <td>Computer Vision</td>
+                <td>Healthcare</td>
+                <td>Medical Imaging</td>
+                <td>Enhances diagnostic accuracy</td>
+            </tr>
+            <tr>
+                <td>Machine Learning</td>
+                <td>Finance</td>
+                <td>Fraud Detection</td>
+                <td>Reduces financial losses</td>
+            </tr>
+            <tr>
+                <td>Reinforcement Learning</td>
+                <td>Robotics</td>
+                <td>Autonomous Vehicles</td>
+                <td>Enables self-driving technology</td>
+            </tr>
+        </table>
     <h2>The Future of AI</h2>
     <p>AI continues to grow and impact various fields such as
         healthcare, education, finance, and manufacturing.
@@ -60,5 +100,15 @@
         <a href="https://en.wikipedia.org/wiki/Artificial_intelligence">Artificial Intelligence (AI)</a>
         <a href="https://en.wikipedia.org/wiki/Natural_language_processing">Natural language processing</a>
         <a href="https://en.wikipedia.org/wiki/Siri">Siri</a>
+
+    <h2>Survey</h2>
+    <p>Here is a survey about your knowledge
+        of issues related to artificial
+        intelligence. The survey is anonymous.
+        Please fill out the survey. The survey
+        results will be helpful in examining
+        the degree of use of artificial
+        intelligence in different age groups.</p>
+        <a href="survey.html">Fill out the survey</a>
     </body>
 </html>
