--- a/06-WebContentStructure/countries.html
+++ b/06-WebContentStructure/countries.html
@@ -22,8 +22,20 @@
         <tr>
             <td>Brazil</td>
             <td>Brasília</td>
-            <td>3.1</td>
+            <td>216.4</td>
             <td>Real (BRL)</td>
+        </tr>
+        <tr>
+            <td>Ukraine</td>
+            <td>Kyiv</td>
+            <td>37</td>
+            <td>Hryvnia (UAH)</td>
+        </tr>
+        <tr>
+            <td>Poland</td>
+            <td>Warsaw</td>
+            <td>36.69</td>
+            <td>Złoty (PLN)</td>
         </tr>
     </table>
 </body>
