--- a/07-WebContentFormatting/landmarks.html
+++ b/07-WebContentFormatting/landmarks.html
@@ -13,6 +13,19 @@
             background-color: lightgray;
             text-align: center;
         }
+        /* Styling for h2 */
+        h2 {
+            color:black;
+            margin: 20px auto;
+            border: 15px solid grey;
+        }
+
+        /* Styling for unordered list */
+        ul {
+            color:black;
+            margin: 20px auto;
+            border: 10px solid lightgray;
+        }
 
         /* Styling for p */
         p {
